# points_testing2

./: README.md
src/points_testing2/: package.xml  points_testing2_config.rviz  setup.cfg  setup.py
src/points_testing2/points_testing2/: corrector_functions.py  downsample.py  full_points.txt  generate_points.py  rdp_algorithm.py  test_client.py
src/points_testing2/points_testing2/scripts/: corrector_functions.py  downsample.py
src/points_testing2/points_testing2/test_values/: chaos_raster.txt  good_raster.txt  line.txt  points.txt  points2.txt  raster.txt  temp.txt
src/services/: CMakeLists.txt  package.xml
src/services/srv/: DownsampleSrvInfo.srv
