<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>points_testing2</name>
  <version>0.1.0</version>
  <description>A program that downsamples a large dataset of Poses by implementing the Ramer Douglas Peucker algorithm with alterations to accomodate orientations.</description>
  <maintainer email="smith.15485@osu.edu">Samantha Smith</maintainer>
  <license>Apache 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
